--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 /* Hero Section */
 .hero {
-    background-image: url('path/to/your-image.jpg');
+    background-image: url('Project1.jpg');
     background-size: cover;
     background-position: center;
     color: #fff;
